WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197450
Link Previews that use WKImagePreviewViewController are not always scaled correctly
https://bugs.webkit.org/show_bug.cgi?id=197450
Summary
Link Previews that use WKImagePreviewViewController are not always scaled cor...
Dean Jackson
Reported
2019-04-30 17:58:19 PDT
Link Previews that use WKImagePreviewViewController are not always scaled correctly
Attachments
Patch
(1.60 KB, patch)
2019-04-30 18:13 PDT
,
Dean Jackson
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-30 17:58:44 PDT
<
rdar://problem/50357695
>
Dean Jackson
Comment 2
2019-04-30 18:13:17 PDT
Created
attachment 368639
[details]
Patch
Dean Jackson
Comment 3
2019-05-01 12:20:05 PDT
Committed
r244836
: <
https://trac.webkit.org/changeset/244836
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug