Link Previews that use WKImagePreviewViewController are not always scaled correctly https://bugs.webkit.org/show_bug.cgi?id=197450 <rdar://problem/50357695>

Reviewed by Wenson Hsieh.

Tell the UIImageView that we create in WKImagePreviewViewController to use
a filling scaling method.

* UIProcess/WKImagePreviewViewController.mm:
(-[WKImagePreviewViewController initWithCGImage:defaultActions:elementInfo:]):

Canonical link: https://commits.webkit.org/211645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244836 268f45cc-cd09-0410-ab3c-d52691b4dbfc